# sharp

./: .gitignore  CLAUDE.md  README.md  data.dvc  environment.yml  extract_embeddings.py  pixi.toml  pyproject.toml  sharp_dag.html  sharp_pipeline.html
.dvc/: config
docs/: ARCHITECTURE.md  BACKLOG.md  PIPELINE.md  sharp_dag.html
notebooks/: benchmarks_part1.py  benchmarks_part2.py  inspecting_parquet.py
notebooks/conversions/: benchmarks_part1.html  benchmarks_part1.ipynb  benchmarks_part2.html  benchmarks_part2.ipynb
scripts/: convert_antismash_to_parquet.py  convert_deepbgc_to_parquet.py  convert_gecco_to_parquet.py  download_bgc-atlas.sh  download_mibig.sh  generate_mock_benchmark_data.py  generate_mock_data.py  prepare_bgcatlas_ground_truth.py  prepare_mibig_ground_truth.py  setup_antismash.sh  setup_deepbgc.sh  setup_gecco.sh
src/sharp/: __init__.py  config.py  evaluate.py  extract_embeddings.py  io.py  metrics.py  model_management.py
tests/: conftest.py  test_convert_antismash.py  test_convert_deepbgc.py  test_convert_gecco.py  test_evaluate.py  test_extract_embeddings.py  test_generate_mock_data.py  test_io.py  test_metrics.py  test_model_management.py  test_prepare_bgcatlas.py  test_prepare_mibig.py
tests/fixtures/: antismash_sequence.json  deepbgc_out.bgc.tsv  gecco_sequence.clusters.tsv
